# bullwright

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.github/workflows/: cd.yml  ci.yml
agents/harness/: pyproject.toml  tasks.yaml
agents/harness/src/bullwright_harness/: __init__.py  cli.py  loops.py  model.py  runner.py  tools.py
agents/skills/bw-earnings-review/: SKILL.md
agents/skills/bw-rag-search/: SKILL.md
agents/skills/bw-report-writer/: SKILL.md
agents/skills/bw-thesis-update/: SKILL.md
apps/api/: pyproject.toml
apps/api/src/bullwright_api/: __init__.py  app.py  cli.py  errors.py  export_blog.py  export_site_data.py  schemas.py  settings.py
apps/api/src/bullwright_api/auth/: deps.py  keys.py  ratelimit.py
apps/api/src/bullwright_api/routes/: agents_meta.py  meta.py  ops.py  quant.py  reports.py  runs.py  search.py  signals.py  tickers.py
apps/api/src/bullwright_api/services/: audit.py  idempotency.py  reports.py
apps/web/: astro.config.mjs  package-lock.json  package.json
apps/web/src/: content.config.ts
apps/web/src/components/: Chart.astro
apps/web/src/layouts/: Base.astro
apps/web/src/lib/: siteData.ts
apps/web/src/pages/: agents.astro  index.astro  indexes.astro
apps/web/src/pages/reports/: [...slug].astro
apps/web/src/pages/tickers/: [symbol].astro  index.astro
apps/worker/: pyproject.toml
apps/worker/src/bullwright_worker/: __init__.py  cli.py  jobs.py  quant_jobs.py  runner.py  signal_jobs.py
docs/: AGENT_SKILLS.md  API.md  ARCHITECTURE.md  DB_SCHEMA.md  INDEXES.md  OPEN_DECISIONS.md  PLAN.md  SPEC.md  SUBSCRIPTION.md  TEST_PLAN.md  openapi.json
docs/adr/: 0001-initial-stack.md  0002-news-signals-scheduler.md
infra/cloud/: fly.toml  main.tf
infra/docker/: Dockerfile  compose.yaml
rag/: pyproject.toml
rag/src/bullwright_rag/: __init__.py  chunker.py  embedder.py  store.py
scripts/: sync.sh
tests/integration/api/: test_ops_dashboard.py  test_report_lifecycle.py
tests/integration/clients/: conftest.py  test_bw_agent.py
tests/integration/harness/: LIVE_SMOKE.md  test_harness.py
tests/integration/quant/: test_backtest.py  test_quant_api.py  test_scorecard.py
tests/integration/rag/: test_search_pipeline.py
tests/integration/signals/: test_signals.py
tests/security/: conftest.py  test_api_security.py
tests/unit/: test_smoke.py
tests/unit/core/: test_envelope.py  test_report_schemas.py  test_status_machine.py
tests/unit/db/: test_models_roundtrip.py
tests/unit/indexes/: test_index_contract.py
tests/unit/news/: test_news_package.py
tests/unit/quant/: test_scoring_pure.py
tests/unit/rag/: test_chunker.py
tests/unit/skills/: test_skill_lint.py
