[project]
name = "bullwright"
version = "0.0.1"
description = "Bullwright — stock research, forged by agents. Workspace root."
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.uv.workspace]
# List members explicitly; add each package/app here as it lands.
members = ["packages/core"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages", "apps", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "S",                # bandit (security)
    "N",                # naming
    "RUF",
]
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # asserts are fine in tests

[tool.mypy]
python_version = "3.12"
strict = true
packages = []           # populated as packages land

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: needs services (db/ollama); excluded from unit runs",
    "security: security requirement tests (S/A/P rules)",
]
