[project]
name = "bullwright"
version = "0.0.1"
description = "Bullwright — stock research, forged by agents. Workspace root."
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.uv]
# copy, not clonefile: on macOS, CoW clones from uv's cache carry the
# UF_HIDDEN file flag, and Python's site module silently skips hidden
# .pth files — which breaks every editable install in the workspace.
link-mode = "copy"

[tool.uv.workspace]
# List members explicitly; add each package/app here as it lands.
members = ["packages/core", "packages/db", "packages/clients", "packages/quant", "packages/news", "apps/api", "rag", "apps/worker", "agents/harness"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit",
    "types-jsonschema>=4.26.0.20260518",
    "httpx2>=2.5.0",
    "psycopg[binary]>=3.1",
    "types-pyyaml>=6.0.12.20260518",
    "hypothesis>=6.156.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages", "apps", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "S",                # bandit (security)
    "N",                # naming
    "RUF",
]
[tool.ruff.lint.flake8-bugbear]
# typer's declarative-default idiom is safe; silence B008 for it
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # asserts are fine in tests
# Alembic-generated code; reviewed, not hand-formatted
"packages/db/migrations/versions/*" = ["E501", "W291"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = []           # populated as packages land

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: needs services (db/ollama); excluded from unit runs",
    "security: security requirement tests (S/A/P rules)",
]
