[project]
name = "bullwright-rag"
version = "0.1.0"
description = "Bullwright RAG: chunking, embeddings (Ollama), vector search."
requires-python = ">=3.12"
dependencies = [
    "bullwright-core",
    "bullwright-db",
    "numpy>=1.26",
    "httpx2>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bullwright_rag"]

[tool.uv.sources]
bullwright-core = { workspace = true }
bullwright-db = { workspace = true }
