[project]
name = "bullwright-harness"
version = "0.1.0"
description = "Unattended local-agent runner for Ollama models (docs/AGENT_SKILLS.md §3-4)."
requires-python = ">=3.12"
dependencies = [
    "bullwright-core",
    "bullwright-client",
    "httpx2>=0.1",
    "jsonschema>=4.22",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
bw-harness = "bullwright_harness.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bullwright_harness"]

[tool.uv.sources]
bullwright-core = { workspace = true }
bullwright-client = { workspace = true }
