[project]
name = "bullwright-api"
version = "0.1.0"
description = "Bullwright REST API — the only write path (docs/API.md)."
requires-python = ">=3.12"
dependencies = [
    "bullwright-core",
    "bullwright-db",
    "bullwright-rag",
    "bullwright-quant",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
    "typer>=0.12",
]

[project.scripts]
bw = "bullwright_api.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bullwright_api"]

[tool.uv.sources]
bullwright-core = { workspace = true }
bullwright-db = { workspace = true }
bullwright-rag = { workspace = true }
bullwright-quant = { workspace = true }
