[project]
name = "bullwright-worker"
version = "0.1.0"
description = "Bullwright background jobs: embed_report, blog_export (docs/ARCHITECTURE.md §4)."
requires-python = ">=3.12"
dependencies = [
    "bullwright-core",
    "bullwright-db",
    "bullwright-rag",
    "bullwright-api",
]

[project.scripts]
bw-worker = "bullwright_worker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bullwright_worker"]

[tool.uv.sources]
bullwright-core = { workspace = true }
bullwright-db = { workspace = true }
bullwright-rag = { workspace = true }
bullwright-api = { workspace = true }
